Changelog
=========


1.0.0a5 (unreleased)
--------------------

- Add a hidden h2 to the logo markup. Without this separation the logo belongs
  semantically to the service navigation. This confuses users with screenreaders.
  [mathias.leimgruber]

- Define styling for plone.app.multilingual based on ftw.theming.
  [Kevin Bieri]

- Extend menues/mobile scss by header/section tags to support menues without definition lists.
  [mathias.leimgruber]

- Wrap Paragraph-Tag arround text in div with documentDescription css class.
  [mathias.leimgruber]

- Define styling for portlets and overlay  based on ftw.theming.
  [Kevin Bieri]

- Add missing clearfix for the Simplelayout portlet.
  [mathias.leimgruber]

- Add missing visualClear css class.
  [elioschmutz]

- Add missing !default to font family definitions.
  [mathias.leimgruber]

- Fix init apply of onegovbear profile. Check commit desc for details.
  [mathias.leimgruber]

- Apply pagewrapper padding only to header if feature is enabled.
  Remove pagewrapper padding for content area.
  [mathias.leimgruber]

- Introduce theming variable to configure pathbar location.
  It is possible to set the `pathbar_full_width` theme parameter in the FTI.
  When `pathbar_full_width` is set to `python: True` the pathbar is displayed full width.
  When `pathbar_full_width` is set to `python: False` the pathbar in the content at the top.

- Decrease upper and lower padding of logoRow.
  [elioschmutz]

- Add padding for page-wrapper
  [elioschmutz]

- Hide pathbar and documentFirstHeading on the front page.
  [mathias.leimgruber]

- Add pagewrapper.scss - this can be configured thru ``$showpagewrapper`` variable.
  [mathias.leimgruber]

- Add more global sections (aka tabs) scss variables.
  [kevin]

- Remove custom pathbar styling and template.
  [kevin]

- Do not display searchbox on the same height as the global section.
  We need more space for the global section.
  [mathias.leimgruber]

1.0.0a4 (2015-12-09)
--------------------
