@@ -1,15 +1,19 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
+    xmlns:five="http://namespaces.zope.org/five"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:plone="http://namespaces.plone.org/plone"
+    xmlns:profilehook="http://namespaces.zope.org/profilehook"
     xmlns:zcml="http://namespaces.zope.org/zcml"
     xmlns:upgrade-step="http://namespaces.zope.org/ftw.upgrade"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     i18n_domain="plonetheme.onegovbear">
 
+    <five:registerPackage package="." initialize=".initialize" />
     <i18n:registerTranslations directory="locales"/>
 
     <include package="ftw.upgrade" file="meta.zcml" />
+    <include package="ftw.profilehook" />
     <include package="plone.app.theming" />
 
     <include file="resources.zcml" />
@@ -29,9 +33,26 @@
         provides="Products.GenericSetup.interfaces.EXTENSION"
         />
 
+    <profilehook:hook
+        profile="plonetheme.onegovbear:default"
+        handler=".hooks.installed"
+        />
+
     <upgrade-step:directory
         profile="plonetheme.onegovbear:default"
         directory="upgrades"
+        />
+
+    <genericsetup:registerProfile
+        name="uninstall"
+        title="uninstall plonetheme.onegovbear"
+        directory="profiles/uninstall"
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        />
+
+    <profilehook:hook
+        profile="plonetheme.onegovbear:uninstall"
+        handler=".hooks.uninstalled"
         />
 
 </configure>
