@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+
+    <stylesheet
+        id="member.css"
+        enabled="1" />
+
+    <stylesheet
+        id="RTL.css"
+        expression="python:portal.restrictedTraverse('@@plone_portal_state').is_rtl()" />
+
+</object>
